--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.0",
     "axios": "^1.3.2",
     "bcrypt": "^5.1.0",
@@ -25,6 +26,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.2",
     "sequelize": "^6.28.0",
     "socket.io": "^4.6.1",
